[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask-huey"
description = 'A Flask extension that runs the huey_consumer.'
authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment', 'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent', 'Programming Language :: Python',
    'Programming Language :: Python :: 3.12',
    'Natural Language :: English',
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    'huey',
    'flask',
    'click'
]

[project.scripts]
flask-huey = "flask_huey.cli:cli"

[project.urls]
Documentation = "https://cheesecake87.github.io/flask-huey/"
Source = "https://github.com/CheeseCake87/flask-huey"

[tool.flit.sdist]
exclude = [
    ".github/",
    ".env",
    ".gitignore",
    "requirements_build.txt",
    "requirements_dev.txt",
    "requirements_docs.txt",
]